--- a/serbioneer-front/src/index.html
+++ b/serbioneer-front/src/index.html
@@ -5,6 +5,7 @@
   <title>Serbioneer</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
   <link rel="icon" type= "image/png" href="assets\images\srbija_logo.png">
 </head>
 <body class="mat-typography">
