--- a/serbioneer-front/src/index.html
+++ b/serbioneer-front/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
+  <link rel="stylesheet" href="https://openlayers.org/en/v6.5.0/css/ol.css" type="text/css">
   <link rel="icon" type= "image/png" href="assets\images\srbija_logo.png">
 </head>
 <body class="mat-typography">
