--- a/serbioneer-front/src/index.html
+++ b/serbioneer-front/src/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons&display=block" rel="stylesheet">
   <link rel="stylesheet" href="https://openlayers.org/en/v6.5.0/css/ol.css" type="text/css">
   <link rel="icon" type= "image/png" href="assets\images\srbija_logo.png">
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBCtbTPTKPVG3w-mkIaB5PTczTaOhKXTfI&libraries=places&sensor=false&language=en"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=SECRETKEY&libraries=places&sensor=false&language=en"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
